--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "@clerk/nextjs": "^4.29.9",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@react-three/drei": "^9.102.6",
+    "@react-three/fiber": "^8.15.19",
     "@tabler/icons-react": "^3.1.0",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
+    "@types/three": "^0.162.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.14",
@@ -22,7 +28,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.162.0",
+    "three-globe": "^2.31.0"
   },
   "devDependencies": {
     "@types/node": "^20",
