--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
+    "@nextui-org/avatar": "^2.0.24",
+    "@nextui-org/react": "^2.2.10",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@react-three/drei": "^9.102.6",
